--- a/api/package.json
+++ b/api/package.json
@@ -28,7 +28,8 @@
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "winston": "^3.8.2"
   },
   "devDependencies": {
     "jest": "^29.5.0",
